# algo-quant-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/: prices_demo.csv
outputs/benchmarks/: scaling.csv
outputs/demo/benchmarks/: scaling.csv
outputs/demo/graph/tables/: pagerank.csv
outputs/demo/hybrid/tables/: frontier_capped.csv  weights_best_sharpe_capped.csv
outputs/demo/risk/: risk_report.json
outputs/reports/demo/: mu.txt
outputs/reports/hybrid_demo/tables/: cluster_caps.json  clusters.csv  frontier_capped.csv  weights_best_sharpe_capped.csv
outputs/reports/opt_demo/tables/: frontier.csv  weights_best_sharpe.csv
outputs/reports/risk_demo/: risk_report.json
src/algoquantengine/: __main__.py  cli.py
src/algoquantengine/bench/: plot.py  scaling.py
src/algoquantengine/config/: settings.py
src/algoquantengine/data/: features.py  loaders.py  preprocess.py
src/algoquantengine/graph/: algorithms.py  build.py  constraints.py
src/algoquantengine/opt/: backtest.py  mean_variance.py  risk.py  solvers.py
src/algoquantengine/report/: export.py  plots.py
src/algoquantengine/sim/: scenarios.py
tests/: test_data_pipeline.py  test_graph.py  test_hybrid_constraints.py  test_opt.py  test_risk.py
